[gd_scene load_steps=4 format=3 uid="uid://d276dlns0t06y"]

[ext_resource type="Script" uid="uid://bf35r0bxg26i0" path="res://scenes/special_attacks/sword_beam.gd" id="1_4wmux"]
[ext_resource type="Texture2D" uid="uid://bbsp3uxw1js7b" path="res://images/sword_beam.png" id="1_bk8qp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4wmux"]
size = Vector2(155.25, 222.5)

[node name="SwordBeam" type="Area2D"]
scale = Vector2(0.2, 0.2)
collision_layer = 16
collision_mask = 22
script = ExtResource("1_4wmux")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(7, -7)
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_bk8qp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(112.375, -76.25)
shape = SubResource("RectangleShape2D_4wmux")

[node name="RemoveLaserTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="RemoveLaserTimer" to="." method="_on_remove_laser_timer_timeout"]
